2004-07-15 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveRelaxation*) generalized the grid
	relaxation methods. Now the relaxation scheme is controled is an
	argument to gridmoveRelaxationStartUp.
	* src/gridmove.h added relaxationScheme macros gridmove*_SCHEME
	to select relaxation method for gridmoveRelaxationStartUp.
	* src/gridfortran.c (gridmoverelax*_) generalized the grimove
	relax functions to call the general src/gridmove.c methods. 
	Now the relaxation scheme is controled is an argument to startup.

2004-07-14 12:56 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c now has ElasticRelaxation that should work like 
	the springs do. (move in steps and parallel)

2004-07-14 11:34 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c added LU and BackSolve 3x3 routines

2004-07-13 16:21 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c added compressed row storage to set up linear
	elasticity.

2004-07-13 15:12 Mike Park  <mike.park@nasa.gov>

	* Made 1.0.0 Release. First public release. 
	Use with FUN3D version 3.3.0

2004-07-09 12:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridMinARAroundNodeExceptGem) added.
	* src/gridinsert.c (gridCollapseEdge) used 
	gridMinARAroundNodeExceptGem to not collapse if causes bad AR.

2004-07-09 12:25 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridloadglobalnodedata_,gridsetlocalnodedata_)
	fixed a potential memory write past bounds for the the last node
	in the passing array having face but no edge connectivity.

2004-07-08 15:25 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelsmooth_) exposed optimizationLimit 
	and laplacianLimit.
	* src/gridmpi.c (gridParallelSmooth) exposed optimizationLimit 
	and laplacianLimit.

2004-07-06 17:25 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) changed the global node
	id's calcualtion for face patches to use CADTopo_VolFacePts
	instead of UGPatch_GlobalIndex. This is the correct numbering if